# data-factory

./: .gitignore  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements.txt
data_factory/: __init__.py  cli.py
data_factory/adapters/: __init__.py  base.py  bilibili.py  discourse.py  github_adapter.py  reddit.py  tiktok.py  twitter.py  xiaohongshu.py  youtube.py  zhihu.py
data_factory/core/: __init__.py  config.py  indexer.py  opencli.py  pipeline.py  refresh.py  router.py  scheduler.py  schema.py  storage.py  video.py
data_factory/processors/: __init__.py  base.py  images.py  transcribe.py
docs/superpowers/plans/: 2026-04-09-data-factory-skill.md
docs/superpowers/specs/: 2026-04-09-data-factory-skill-design.md  2026-04-10-download-robustness-and-failure-summary-design.md
knowledge/: experiences_template.md  platform_quirks.md
modules/: discover.md  experience.md  fetch.md  init.md  schedule.md
tests/: conftest.py  test_cli.py
tests/adapters/: test_base.py  test_bilibili.py  test_discourse.py  test_github_adapter.py  test_reddit.py  test_tiktok.py  test_twitter.py  test_xiaohongshu.py  test_youtube.py  test_zhihu.py
tests/core/: test_config.py  test_indexer.py  test_opencli.py  test_pipeline.py  test_refresh.py  test_router.py  test_scheduler.py  test_schema.py  test_storage.py
tests/processors/: test_images.py  test_transcribe.py
